--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@prisma/client": "^5.4.2",
     "next": "13.5.5",
+    "quill-image-uploader": "^1.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
